@@ -8,3 +8,6 @@ pindel 0.2.4o, March 9 2012
 pindel 0.2.4p, March 26 2012
 1. Kai: what: added output sorting for reads to fix the 'unique' number that was not reported correctly for some events. Why? unique count (column 19) sometimes showed 0 or other incorrect numbers.
 2. Eric-Wubbo: what: made separate function for reading configuration files. Why: old version did not give clear error messages when confronted with config files which did not exist, were empty, were formatted incorrectly, or when the bam-files called did not exist or did not have accompanying error files. The new version should make it much easier for users (and programmers) to find out why a test or a run go wrong. The new version can also handle it if the final line does not end in a newline.
+
+pindel 0.2.4q, March 27 2012
+1. Eric-Wubbo: ensured that -c all also works (why: question on seq-answers of someone who could not run pindel because using -c all; now compare ucase-version of c-argument to all)
